--- a/css/components/preview.css
+++ b/css/components/preview.css
@@ -7,10 +7,12 @@
 .slide-previews 
 { 
     width:100vw; 
+    
     height:100vh; 
     position:absolute; 
     z-index:10;
     display:none; 
+    border:1px solid red;
 }
 
 .slide-previews:first-of-type { display:flex; }
@@ -29,6 +31,7 @@
     display:flex;
     justify-content: center;
     align-items: center;
+    overflow:hidden;
 }
 
 #content-cards 
