--- a/css/components/admin.css
+++ b/css/components/admin.css
@@ -28,4 +28,6 @@
 @media screen and ( max-width:600px )
 {
     #admin > section > .box-image-admin > img { width:100%; }
+
+    #admin { padding:50px 0px; }
 }
