--- a/css/components/bg-slide.css
+++ b/css/components/bg-slide.css
@@ -43,6 +43,15 @@
     background: linear-gradient(90deg, rgba(0,0,0,1) 5%, rgba(2,0,36,0) 40%);
 }
 
+.dark_screen 
+{
+    position: absolute;
+    z-index:20;
+    width:100%;
+    height:100vh;
+    background-color:rgba(0,0,0,.3);
+}
+
 #slide > section {
     position: absolute;
     z-index:20;
